[metadata]
name = qamts
version = 0.0.1
license = MIT
license_file = LICENSE
platforms = Linux
url = https://github.com/ianmalcolm/QAMTSimulator
description = Simulate multitasking on Quantum Annealer
long_description = file: README.md
long_description_content_type = text/markdown
keywords = quantum annealing multitasking simulator
author = Tian Huang
author_email = huangtian44@hotmail.com
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    =src
include_package_data = True
test_suite = tests
setup_requires =
    numpy
    scipy
    matplotlib
    setuptools >=46.4.0     # let's you use attr: to extract version from a module
install_requires =

[options.packages.find]
where=src

[options.extras_require]
pytest_deps=
    numpy
    scipy
    matplotlib
    pytest
    pytest-cov
    pytest-randomly
